# syl

./: .commit-scope.json  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  release-plz.toml
crates/syl/: Cargo.toml  README.md
crates/syl/src/: lib.rs
crates/syl_elab/: Cargo.toml  README.md
crates/syl_elab/src/: actual_binding.rs  completion.rs  const_eval.rs  const_mir.rs  driver.rs  driver_place.rs  eir.rs  eir_body.rs  eir_build.rs  eir_cell.rs  eir_connect.rs  eir_const.rs  eir_expr.rs  eir_guard.rs  eir_map.rs  eir_method.rs  eir_origin.rs  eir_place.rs  eir_read.rs  eir_type.rs  eir_value.rs  hardware_metadata.rs  hardware_metadata_lower.rs  hw_lower.rs  lib.rs  map_ir.rs  mir.rs  pipeline.rs  program.rs  source.rs  tir.rs
crates/syl_elab/src/const_eval/: lower.rs  mod.rs
crates/syl_elab/src/const_mir/: lower.rs
crates/syl_elab/src/driver/: activity.rs  bounds_check.rs  coverage.rs  drc.rs  facts.rs  guard.rs  guard_coverage.rs  loop_bounds.rs  mod.rs  model.rs  summary.rs  tristate.rs
crates/syl_elab/src/driver_place/: bounds.rs  overlap.rs
crates/syl_elab/src/eir/: assemble.rs  design.rs  facts.rs  mod.rs  module.rs  signal.rs  validate.rs
crates/syl_elab/src/eir_body/: for_emit.rs  request.rs
crates/syl_elab/src/eir_builder/: body.rs  connect.rs  const_mod.rs  map.rs  method.rs  mod.rs  read.rs  ty.rs  value.rs
crates/syl_elab/src/eir_connect/: request.rs
crates/syl_elab/src/hw/: lower.rs  mod.rs
crates/syl_elab/src/map_ir/: metrics.rs  types.rs
crates/syl_elab/src/metadata/: lower.rs  mod.rs  model.rs
crates/syl_elab/src/pipeline/: compiler.rs  debug.rs  mod.rs  output.rs  runner.rs  stage.rs  stage_runner.rs  tests.rs
crates/syl_elab/src/program/: body.rs  design.rs  item.rs  lower.rs  mod.rs
crates/syl_elab/tests/: cancellation.rs  driver_metadata.rs  driver_static_facts.rs  elaboration_numbering.rs
crates/syl_elab/tests/support/: mod.rs
crates/syl_emit/: Cargo.toml  README.md
crates/syl_emit/src/: check.rs  lib.rs  lower.rs  sv_ir.rs
crates/syl_fuzz/: Cargo.toml  README.md
crates/syl_hir/: Cargo.toml  README.md
crates/syl_hir/src/: dump.rs  ids.rs  lib.rs  model.rs  name.rs  resolution.rs
crates/syl_hir/src/model/: body.rs  callable.rs  enum_variant.rs  item.rs  labels.rs  summary.rs  type_ref.rs
crates/syl_lsp/: Cargo.toml  README.md
crates/syl_lsp/src/: adapter.rs  cancellation.rs  diagnostics.rs  lib.rs  main.rs  mapping.rs
crates/syl_query/: Cargo.toml  README.md
crates/syl_query/src/: error.rs  lib.rs  navigation.rs  snapshot.rs  tests.rs
crates/syl_query/src/snapshot/: api.rs  completion_context.rs  diagnostics.rs  document_symbols.rs  generic.rs  import_completion.rs
crates/syl_sema/: Cargo.toml  README.md
crates/syl_sema/src/: actual_binding.rs  analysis.rs  capability.rs  capability_model.rs  cell_summary.rs  completion.rs  const_eval.rs  const_mir.rs  diagnostic.rs  error.rs  facts.rs  hir.rs  hir_lower.rs  hir_resolve.rs  hir_view.rs  ids.rs  lib.rs  map_ir.rs  mir.rs  mir_type_resolve.rs  stage_output.rs  tir.rs  tir_const.rs
crates/syl_sema/src/binding/: actual_formal.rs  mod.rs
crates/syl_sema/src/capability/: checker.rs  context.rs  field_schema.rs  mod.rs  model.rs  place.rs  view.rs
crates/syl_sema/src/const_mir/: lower.rs  metrics.rs
crates/syl_sema/src/diagnostic/: error.rs  mod.rs  model.rs
crates/syl_sema/src/facts/: capability.rs  consts.rs  layout.rs  mod.rs  protocol.rs  resolution.rs  semantic_facts.rs  types.rs
crates/syl_sema/src/hir/: mod.rs  view.rs
crates/syl_sema/src/hir_lower/: index.rs
crates/syl_sema/src/ir/: mir_type_resolve.rs  mod.rs
crates/syl_sema/src/map_ir/: metrics.rs  types.rs
crates/syl_sema/src/opaque_summary/: collect.rs  model.rs  table.rs
crates/syl_sema/src/pipeline/: analysis.rs  input.rs  mod.rs  output.rs  session.rs
crates/syl_sema/src/query_support/: completion.rs  mod.rs
crates/syl_sema/src/summary/: cell.rs  mod.rs
crates/syl_sema/src/tir/: binding.rs  body_check.rs  builtin.rs  check.rs  checker.rs  consts.rs  design.rs  enum_layout.rs  extension_method.rs  mod.rs  phase.rs  return_type.rs  type_identity_tests.rs  type_support.rs
crates/syl_sema/tests/: alias_resolution.rs  bundle_resolution.rs  capability_regression.rs  cell_summary.rs  const_resolution.rs  hir_regression.rs  semantic_facts.rs  semantic_facts_bundle.rs  semantic_facts_const_eval.rs  semantic_facts_structs.rs  tir_semantics.rs
crates/syl_sema/tests/semantic_facts/: software_structs.rs  support.rs
crates/syl_sema/tests/support/: mod.rs
crates/syl_session/: Cargo.toml  README.md
crates/syl_session/src/: cancel.rs  collector.rs  config.rs  database.rs  document.rs  error.rs  host.rs  import_resolver.rs  lib.rs  resolver.rs  snapshot.rs  uri.rs  vfs.rs
crates/syl_session/src/database/: cache.rs  documents.rs  revision.rs
crates/syl_session/src/snapshot/: model.rs  package_semantics.rs  semantic_cache.rs  workspace.rs
crates/syl_span/: Cargo.toml  README.md
crates/syl_span/src/: lib.rs
crates/syl_syntax/: Cargo.toml  README.md
crates/syl_syntax/src/: ast.rs  build.rs  dump.rs  lexer.rs  lib.rs  lossless.rs  node_index.rs  parser.rs  token.rs
crates/syl_syntax/src/ast/: span.rs
crates/syl_syntax/src/lexer/: lossless.rs  scanner.rs  (+1 more)
crates/sylc/: Cargo.toml  README.md
crates/sylc/src/: main.rs
crates/sylc/tests/: architecture_backend_emit.rs  architecture_contracts.rs  architecture_elaboration.rs  architecture_frontend.rs  architecture_ir_boundaries.rs  architecture_markers.rs  architecture_opaque_summaries.rs  architecture_phase1_ir.rs  architecture_phase2_frontend.rs  architecture_phase3_sema.rs  architecture_phase4_elab.rs  architecture_phase5_opaque.rs  architecture_phase6_backend.rs  architecture_phase7_query_lsp.rs  architecture_phase8_std.rs  architecture_query_lsp.rs  architecture_semantic_analysis.rs  architecture_std_sources.rs  cli.rs  conformance.rs  driver_overlap.rs  generate_labels.rs  interface_regression.rs  package_metadata.rs  regression.rs  regression_capability.rs
(+145 files in other folders)
