[package]
name = "syl_elab"
description = "Elaboration pipeline, expansion tracking, and hardware validation for Syl."
documentation = "https://docs.rs/syl_elab"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
derive_builder.workspace = true
syl_hir.workspace = true
syl_hw.workspace = true
syl_sema.workspace = true
syl_span.workspace = true

[dev-dependencies]
syl_syntax.workspace = true
